@@ -129,7 +129,7 @@ The current version recognizes the following module formats:
 
   PC packed formats:
 
-  AMF	***	DSMI (DMP)		1.0, 1.1, 1.2, 1.3, 1.4
+  AMF	***	DSMI (DMP)		0.9, 1.0, 1.1, 1.2, 1.3, 1.4
   GDM   ***	Generic Digital Music	1.0
   STX	*****	ST Music Interface Kit	1.0, 1.1
 
